Se adicionaron estilos al Proyecto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=H, initial-scale=1.0">
     <title>Ejercicio_01</title>
+    <link rel="stylesheet" href="style.css">   
 </head>
 <body>
     <h1>Desarrollo del ejercicio número 1</h1>
